--- a/AddressDetails/appsettings.json
+++ b/AddressDetails/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DatabaseConnection": "Server=SGZ-IN01070;Database=AddressDetails;Trusted_Connection=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
